--- a/index.html
+++ b/index.html
@@ -19,10 +19,159 @@
     </section>
 
     <section class="main-content">
-      <h1>
-<a id="proyecto_zero" class="anchor" href="#proyecto_zero" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>proyecto_zero</h1>
+      
+
+<ul>
+<li>
+<a href="#proyecto-zero">Proyecto Zero</a>
+
+<ul>
+<li>
+<a href="#primera-reunin-22112016">Primera reunión (22/11/2016)</a>
+
+<ul>
+<li><a href="#el-tema-del-proyecto">El tema del proyecto.</a></li>
+<li>
+<a href="#tecnologas-a-usar">Tecnologías a usar</a>
+
+<ul>
+<li><a href="#backend">Backend</a></li>
+<li><a href="#frontend">Frontend</a></li>
+<li><a href="#mobile">Mobile</a></li>
+<li><a href="#gestin-del-proyecto">Gestión del proyecto</a></li>
+</ul>
+</li>
+<li><a href="#roles-y-lderes-del-proyecto">Roles y líderes del proyecto.</a></li>
+<li><a href="#temas-pendientes">Temas pendientes</a></li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+
+
+
+<h1>
+<a id="proyecto-zero" class="anchor" href="#proyecto-zero" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Proyecto Zero</h1>
 
 <p>Proyecto Zero es una aplicación mobile y web para gestionar tu contabilidad personal de forma fácil. Es un proyecto colaborativo, así que si quieres formar parte, ponte en contacto con el administrador.</p>
+
+<h2>
+<a id="primera-reunión-22112016" class="anchor" href="#primera-reuni%C3%B3n-22112016" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Primera reunión (22/11/2016)</h2>
+
+<p>El Martes 22 de Noviembre de 2016 a las 20:00, en el canal #proyecto_zero del grupo de Slack de Huelva Developers tuvimos la primera reunión para comenzar con el Proyecto Zero. En esta primera reunión se decidieron:</p>
+
+<ul>
+<li>El tema del proyecto.</li>
+<li>Las tecnologías a usar.</li>
+<li>Los roles y líderes del proyecto.</li>
+</ul>
+
+<h3>
+<a id="el-tema-del-proyecto" class="anchor" href="#el-tema-del-proyecto" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>El tema del proyecto.</h3>
+
+<p>Había tres posibilidades sobre la mesa, durante la reunión se planteó una más, desarrollar un ERP, pero se descartó debido a su complejidad y que la más votada está relacionada con ella partiendo desde una base más sencilla. Las tres posiblidades eran:</p>
+
+<ul>
+<li>App y Web para gestión de proyectos, time tracking y facturación para autónomos.</li>
+<li>App y Web de contabilidad personal.</li>
+<li>Juego de estrategia futurista.</li>
+</ul>
+
+<p>El juego propuesto por <a href="https://github.com/drap10" class="user-mention">@drap10</a> se descartó debido a su complejidad, ya que se busca un proyecto sencillo, y se propuso para un segundo proyecto una vez concluido o abordado el primero. Por lo tanto, la encuesta se limitó a las dos primeras posibilidades y el resultado fue el siguiente:</p>
+
+<p><img src="https://www.dropbox.com/s/p6bj7pci324l719/Screenshot%202016-11-22%2022.19.48.png?raw=1" alt='Resultado de encuesta "Proyecto elegido"' title="Proyecto Elegido"></p>
+
+<p>El proyecto ganador fue propuesto por <a href="https://github.com/txemac" class="user-mention">@txemac</a>, App y Web de contabilidad personal.</p>
+
+<h3>
+<a id="tecnologías-a-usar" class="anchor" href="#tecnolog%C3%ADas-a-usar" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tecnologías a usar</h3>
+
+<p>En el siguiente bloque de la reunión se debatió por las tecnologías a usar en Backend, Frontend, Mobile y Gestión de proyectos. La idea general era que al menos una persona conociera la tecnología propuesta, para que pudiera liderar el equipo de desarrollo. El resultado de las encuestas fue:</p>
+
+<h4>
+<a id="backend" class="anchor" href="#backend" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Backend</h4>
+
+<p>Se propusieron las siguientes tecnologías:</p>
+
+<ul>
+<li>PHP/Laravel.</li>
+<li>Python/Django.</li>
+<li>Python/Flask.</li>
+<li>Elixir/Phoneix (no llegó a votarse porque nadie conocía esta tecnología).</li>
+</ul>
+
+<p><img src="https://www.dropbox.com/s/zkhqweubp55kdtv/Screenshot%202016-11-22%2022.29.00.png?raw=1" alt='Resultado de encuesta "Backend"' title="Backend"></p>
+
+<p>El ganador fue Python/Django. Aunque ninguno de los presentes en la reunión es experto en ella, tenemos miembros de la comunidad que sí lo son, además, la idea original es aprender con este proyecto, así que esta parte supondrá un esfuerzo extra.</p>
+
+<h4>
+<a id="frontend" class="anchor" href="#frontend" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Frontend</h4>
+
+<p>Se propusieron las siguientes tecnologías:</p>
+
+<ul>
+<li>AngularJS.</li>
+<li>ReactJS.</li>
+<li>VueJS.</li>
+<li>Polymer.</li>
+</ul>
+
+<p><img src="https://www.dropbox.com/s/s7wr29q25z3lpcl/Screenshot%202016-11-22%2022.37.30.png?raw=1" alt='Resultado de encuesta "Frontend"' title="Frontend"></p>
+
+<p>El ganador fue ReactJS. Aunque no hay ningún experto en el grupo, igualmente que con Django, en este caso no sabemos si hay algún experto en nuestra comunidad, pero aprenderemos a base de bien :).</p>
+
+<h4>
+<a id="mobile" class="anchor" href="#mobile" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mobile</h4>
+
+<p>Se propusieron las siguientes tecnologías:</p>
+
+<ul>
+<li>Nativo</li>
+<li>React Native</li>
+<li>Titanium</li>
+</ul>
+
+<p><img src="https://www.dropbox.com/s/1s0yjid6ct0pb0q/Screenshot%202016-11-22%2022.49.40.png?raw=1" alt='Resultado de encuesta "Mobile"' title="Mobile"></p>
+
+<p>El ganador fue Nativo. Aún no se ha decido si se empezará el desarrollo simultáneo para iOS y Android o nos centraremos en alguna de las dos plataformas. Se comentó la idea de empezar con iOS debido a que Swift es un lenguaje que atrae más que Java.</p>
+
+<h4>
+<a id="gestión-del-proyecto" class="anchor" href="#gesti%C3%B3n-del-proyecto" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Gestión del proyecto</h4>
+
+<p>En esta última sección, decidimos qué herramientas usar para la gestión del proyecto. Se propusieron las siguientes herramientas:</p>
+
+<ul>
+<li>GitHub.</li>
+<li>GitHub/Trello.</li>
+<li>Asana.</li>
+<li>Jira.</li>
+</ul>
+
+<p><img src="https://www.dropbox.com/s/99i1cpsm4fke4iy/Screenshot%202016-11-22%2022.53.21.png?raw=1" alt='Resultado de encuesta "Gestión de proyecto"' title="Gestión de proyecto"></p>
+
+<h3>
+<a id="roles-y-líderes-del-proyecto" class="anchor" href="#roles-y-l%C3%ADderes-del-proyecto" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Roles y líderes del proyecto.</h3>
+
+<p>Finalmente, se debatió sobre la necesidad de que hubiera un Project Manager y líderes de equipo. Sobre la figura del Project Manager se decidió que no era necesaria y se tomarían decisiones entre todos los participantes. Aunque no se sometió a votación, algunos estuvieron de acuerdo y nadie se opuso en que <a href="https://github.com/jarcos" class="user-mention">@jarcos</a> llevara la "gestión" del proyecto.</p>
+
+<p>Como líderes de equipo se nombró a los siguientes:</p>
+
+<ul>
+<li>Backend: <a href="https://github.com/txemac" class="user-mention">@txemac</a> y <a href="https://github.com/jaimesares" class="user-mention">@jaimesares</a>.</li>
+<li>Frontend: <a href="https://github.com/dacmail" class="user-mention">@dacmail</a>.</li>
+<li>Mobile: <a href="https://github.com/alvarotoscano" class="user-mention">@alvarotoscano</a>.</li>
+</ul>
+
+<h3>
+<a id="temas-pendientes" class="anchor" href="#temas-pendientes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Temas pendientes</h3>
+
+<p>Queda pendiente para próximas reuniones:</p>
+
+<ul>
+<li>Nombre del proyecto.</li>
+<li>Métodos de comunicación.</li>
+</ul>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/bbhev/proyecto_zero">Proyecto zero</a> is maintained by <a href="https://github.com/bbhev">bbhev</a>.</span>
